fix: fix broken fragment in layout translated page

--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -8,9 +8,9 @@ i18nReady: true
 
 우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 일반적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/ko/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
 - 페이지 쉘 (`<html>`, `<head>` 및 `<body>` 태그들)
-- 개별 페이지 내용이 삽입될 위치를 지정하는 [**`<slot />`**](/ko/core-concepts/astro-components/#slots)
+- 개별 페이지 내용이 삽입될 위치를 지정하는 [**`<slot />`**](/ko/core-concepts/astro-components/#슬롯)
 
- 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/ko/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용](/ko/core-concepts/astro-components/#component-structure)할 수 있습니다. [UI 프레임워크 컴포넌트](/ko/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/ko/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
+ 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/ko/core-concepts/astro-components/#컴포넌트-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용](/ko/core-concepts/astro-components/#컴포넌트-구조)할 수 있습니다. [UI 프레임워크 컴포넌트](/ko/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/ko/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
 
 레이아웃 컴포넌트는 일반적으로 당신의 프로젝트 구성을 위해 `src/layouts` 디렉터리에 배치됩니다. 그러나 필수 사항은 아닙니다.
 
@@ -55,7 +55,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 ```
 
 
-📚 [슬롯](/ko/core-concepts/astro-components/#slots)에 대해 자세히 알아봅니다.
+📚 [슬롯](/ko/core-concepts/astro-components/#슬롯)에 대해 자세히 알아봅니다.
 
 ## 마크다운/MDX 레이아웃
 
@@ -81,7 +81,7 @@ date: "09 Aug 2022"
 마크다운 또는 MDX 페이지의 일반적인 레이아웃은 다음과 같습니다.
 
 1. 마크다운 또는 MDX 페이지의 frontmatter 및 기타 데이터에 접근할 수 있는 `frontmatter` prop 입니다.  
-2. 페이지의 마크다운/MDX 내용을 렌더링할 위치를 나타내는 기본 [`<slot />`](/ko/core-concepts/astro-components/#slots)입니다.
+2. 페이지의 마크다운/MDX 내용을 렌더링할 위치를 나타내는 기본 [`<slot />`](/ko/core-concepts/astro-components/#슬롯)입니다.
 
 ```astro /(?<!//.*){?frontmatter(?:\\.\w+)?}?/ "<slot />"
 ---
@@ -104,7 +104,7 @@ const { frontmatter } = Astro.props;
 </html>
 ```
 
-`MarkdownLayoutProps` 또는 `MDXLayoutProps` 헬퍼를 사용하여 레이아웃의 [`Props` type](/ko/guides/typescript/#component-props)을 설정할 수 있습니다. 
+`MarkdownLayoutProps` 또는 `MDXLayoutProps` 헬퍼를 사용하여 레이아웃의 [`Props` type](/ko/guides/typescript/#컴포넌트-props)을 설정할 수 있습니다. 
 
 ```astro title="src/layouts/BaseLayout.astro" ins={2,4-9}
 ---
