--- a/src/content/docs/en/core-concepts/project-structure.mdx
+++ b/src/content/docs/en/core-concepts/project-structure.mdx
@@ -58,13 +58,13 @@ The `src/` folder is where most of your project source code lives. This includes
 - [Styles (CSS, Sass)](/en/guides/styling/)
 - [Markdown](/en/guides/markdown-content/)
 
-### `src/assets/`
-
-The [`src/assets`](/en/guides/assets/) directory is the recommended folder to use for storing assets (e.g. images) that are processed by Astro. This is not required, and this is not a special reserved folder.
-
 Astro processes, optimizes, and bundles your `src/` files to create the final website that is shipped to the browser.  Unlike the static `public/` directory, your `src/` files are built and handled for you by Astro.
 
 Some files (like Astro components) are not even sent to the browser as written but are instead rendered to static HTML. Other files (like CSS) are sent to the browser but may be optimized or bundled with other CSS files for performance.
+
+### `src/assets/`
+
+The [`src/assets`](/en/guides/assets/) directory is the recommended folder to use for storing assets (e.g. images) that are processed by Astro. This is not required, and this is not a special reserved folder.
 
 ### `src/components`
 
@@ -74,7 +74,7 @@ This is a common convention in Astro projects, but it is not required. Feel free
 
 ### `src/content/`
 
-The `src/content/` directory is used to store [content collections](/en/guides/content-collections/) and an optional collections configuration file. No other files are allowed inside this folder
+The `src/content/` directory is reserved to store [content collections](/en/guides/content-collections/) and an optional collections configuration file. No other files are allowed inside this folder.
 
 ### `src/layouts`
 
