--- a/src/content/docs/en/core-concepts/project-structure.mdx
+++ b/src/content/docs/en/core-concepts/project-structure.mdx
@@ -62,7 +62,7 @@ Astro processes, optimizes, and bundles your `src/` files to create the final we
 
 Some files (like Astro components) are not even sent to the browser as written but are instead rendered to static HTML. Other files (like CSS) are sent to the browser but may be optimized or bundled with other CSS files for performance.
 
-### `src/assets/`
+### `src/assets`
 
 The [`src/assets`](/en/guides/assets/) directory is the recommended folder to use for storing assets (e.g. images) that are processed by Astro. This is not required, and this is not a special reserved folder.
 
@@ -72,7 +72,7 @@ The [`src/assets`](/en/guides/assets/) directory is the recommended folder to us
 
 This is a common convention in Astro projects, but it is not required. Feel free to organize your components however you like!
 
-### `src/content/`
+### `src/content`
 
 The `src/content/` directory is reserved to store [content collections](/en/guides/content-collections/) and an optional collections configuration file. No other files are allowed inside this folder.
 
