fix: fixed broken links

--- a/src/content/docs/es/guides/integrations-guide/node.mdx
+++ b/src/content/docs/es/guides/integrations-guide/node.mdx
@@ -16,7 +16,7 @@ Este adaptador permite a Astro desplegar tu sitio SSR a objetivos de Node.
 
 Si estás usando Astro como un generador de sitios estáticos—su comportamiento es fuera de serie—no necesitas un adaptador.
 
-Si deseas [usar renderizado del lado del servidor (SSR)](/en/guides/server-side-rendering/), Astro requiere un adaptador que coincida con tu tiempo de ejecución de implementación.
+Si deseas [usar renderizado del lado del servidor (SSR)](/es/guides/server-side-rendering/), Astro requiere un adaptador que coincida con tu tiempo de ejecución de implementación.
 
 [Node.js](https://nodejs.org/en/) es un tiempo de ejecución de JavaScript para código del lado del servidor. @astrojs/node puede ser usado en modo independiente o como middleware para otros servidores http, como [Express](https://expressjs.com/).
 
@@ -80,7 +80,7 @@ Controla si el adaptador construye en modo `middleware` o `standalone`.
 
 ## Uso
 
-Primero, [realiza una construcción](/en/guides/deploy/#construyendo-tu-proyecto-localmente). Dependiendo del `mode` seleccionado (ver arriba) sigue los pasos apropiados a continuación:
+Primero, [realiza una construcción](/es/guides/deploy/#construyendo-tu-proyecto-localmente). Dependiendo del `mode` seleccionado (ver arriba) sigue los pasos apropiados a continuación:
 
 ### Middleware
 
