First pass of prerender-default hybrid rendering

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -138,6 +138,36 @@ export async function get() {
 }
 ```
 
+#### Static default prerendering
+
+<Since v="2.5.0" />
+
+You may have a site that is *mostly* static and can benefit from prerendering, but a few of your pages or endpoints need to be server rendered. In this case you can avoid adding the `prerender` to every page that should be prerendered by changing the `output` to `'hybrid'`.
+
+```js
+export { defineConfig } from 'astro/config';
+
+export default defineConfig({
+  output: 'hybrid',
+  experimental: {
+    hybridOutput: true,
+  },
+});
+```
+
+In this case all of your pages and API endpoints will be prerendered. You can not *opt-out* of prerendering by adding `export const prerender = false` to files that should not be prerendered.
+
+```js title="src/pages/randomnumber.js" {1}
+export const prerender = false;
+
+export async function get() {
+  let number = Math.random();
+  return {
+    body: JSON.stringify({ number, message: `Here's a random number: ${number}` }),
+  };
+}
+```
+
 ### `Astro.request.headers`
 
 The headers for the request are available on `Astro.request.headers`. This works like the browser's [`Request.headers`](https://developer.mozilla.org/en-US/docs/Web/API/Request/headers). It is a [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers) object, a Map-like object where you can retrieve headers such as the cookie.
