--- a/src/content/docs/en/editor-setup.mdx
+++ b/src/content/docs/en/editor-setup.mdx
@@ -55,9 +55,9 @@ See [the project's User Guide](https://ota-meshi.github.io/eslint-plugin-astro/u
 
 ### Stylelint
 
-[Stylelint](https://stylelint.io/) is a popular linter for CSS. [A community maintained configuration]([stylelint-config-html](https://github.com/ota-meshi/stylelint-config-html)) provides Astro support. 
+[Stylelint](https://stylelint.io/) is a popular linter for CSS. [A community maintained configuration](https://github.com/ota-meshi/stylelint-config-html) provides Astro support. 
 
-Installation instructions, editor integration, and additional information can be found in the plugin's [README.](https://github.com/gucong3000/postcss-html)
+Installation instructions, editor integration, and additional information can be found in the plugin's [README.](https://github.com/ota-meshi/stylelint-config-html#cd-installation)
 
 ### Prettier
 
