--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -105,7 +105,7 @@ Astro will remain a static-site generator by default. But once you enable a serv
 
 Any individual [page](/en/core-concepts/astro-pages/) or [server endpoint](/en/core-concepts/endpoints/#server-endpoints-api-routes) that supports exporting variables (`.astro`, `.mdx`, `.ts`, or `.js`) can opt in to pre-rendering when your Astro project is configured to use SSR with `output: server`. These files will be statically rendered at build-time, similar to the default [`output: static`](/en/reference/configuration-reference/#output) mode.
 
-Simply add `export const prerender = true:
+Simply add `export const prerender = true`:
 
 ```astro title="src/pages/mypage.astro" {2}
 ---
