fix: change link title follow korean translating guides

--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -6,11 +6,11 @@ i18nReady: true
 
 **레이아웃**은 페이지 템플릿과 같은 재사용 가능한 UI 구조를 제공하는 데 사용되는 [Astro 컴포넌트](/ko/core-concepts/astro-components/)입니다.
 
-우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 일반적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/ko/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
+우리는 일반적으로 헤더, 네비게이션 바 및 푸터와 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 일반적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/ko/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
 - 페이지 쉘 (`<html>`, `<head>` 및 `<body>` 태그들)
 - 개별 페이지 내용이 삽입될 위치를 지정하는 [**`<slot />`**](/ko/core-concepts/astro-components/#슬롯)
 
- 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/ko/core-concepts/astro-components/#컴포넌트-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용](/ko/core-concepts/astro-components/#컴포넌트-구조)할 수 있습니다. [UI 프레임워크 컴포넌트](/ko/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/ko/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
+ 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/ko/core-concepts/astro-components/#컴포넌트-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용](/ko/core-concepts/astro-components/#컴포넌트-구조)할 수 있습니다. [UI frameworks components](/ko/core-concepts/framework-components/) 및 [client-side scripts](/ko/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
 
 레이아웃 컴포넌트는 일반적으로 당신의 프로젝트 구성을 위해 `src/layouts` 디렉터리에 배치됩니다. 그러나 필수 사항은 아닙니다.
 
@@ -80,13 +80,13 @@ date: "09 Aug 2022"
 
 마크다운 또는 MDX 페이지의 일반적인 레이아웃은 다음과 같습니다.
 
-1. 마크다운 또는 MDX 페이지의 frontmatter 및 기타 데이터에 접근할 수 있는 `frontmatter` prop 입니다.  
+1. 마크다운 또는 MDX 페이지의 프론트매터 및 기타 데이터에 접근할 수 있는 `frontmatter` prop 입니다.  
 2. 페이지의 마크다운/MDX 내용을 렌더링할 위치를 나타내는 기본 [`<slot />`](/ko/core-concepts/astro-components/#슬롯)입니다.
 
 ```astro /(?<!//.*){?frontmatter(?:\\.\w+)?}?/ "<slot />"
 ---
 // src/layouts/BaseLayout.astro
-// 1. frontmatter prop은 frontmatter 및 기타 데이터에 대한 접근을 제공합니다.
+// 1. frontmatter prop은 프론트매터 및 기타 데이터에 대한 접근을 제공합니다.
 const { frontmatter } = Astro.props;
 ---
 <html>
@@ -95,7 +95,7 @@ const { frontmatter } = Astro.props;
     <title>{frontmatter.title}</title>
   </head>
   <body>
-    <!-- 여기에 일반 headers 및 footers와 같은 다른 UI 컴포넌트들을 추가합니다. -->
+    <!-- 여기에 일반 헤더 및 푸터와 같은 다른 UI 컴포넌트들을 추가합니다. -->
     <h1>{frontmatter.title} by {frontmatter.author}</h1>
     <!-- 2. 렌더링된 HTML은 기본 slot으로 전달됩니다. -->
     <slot />
@@ -111,7 +111,7 @@ const { frontmatter } = Astro.props;
 import type { MarkdownLayoutProps } from 'astro';
 
 type Props = MarkdownLayoutProps<{
-  // Define frontmatter props here
+  // 이곳에 frontmatter props를 정의하세요.
   title: string;
   author: string;
   date: string;
@@ -140,7 +140,7 @@ const { frontmatter, url } = Astro.props;
 
 - **`file`** - 해당 파일의 절대 경로 (예: `/home/user/projects/.../file.md`).
 - **`url`** - 페이지인 경우 페이지의 URL (예: `/ko/guides/markdown-content`).
-- **`frontmatter`** - 마크다운 또는 MDX 문서에서의 모든 frontmatter.
+- **`frontmatter`** - 마크다운 또는 MDX 문서에서의 모든 프론트매터.
   - **`frontmatter.file`** - 최상위 레벨의 `file` 프로퍼티와 동일.
   - **`frontmatter.url`** - 최상위 레벨의 `url` 프로퍼티와 동일.
 - **`headings`** - 마크다운의 (`h1 -> h6`)제목 목록 또는 MDX 문서의 메타데이터가 연결되어 있습니다. 해당 목록은 다음과 같은 유형을 따릅니다. `{ depth: number; slug: string; text: string }[]`.
@@ -154,7 +154,7 @@ Astro.props = {
   file: "/home/user/projects/.../file.md",
   url: "/ko/guides/markdown-content/",
   frontmatter: {
-    /** 블로그 게시물의 Frontmatter */
+    /** 블로그 게시물의 프론트매터 */
     title: "Astro 0.18 Release",
     date: "Tuesday, July 27 2021",
     author: "Matthew Phillips",
@@ -191,12 +191,12 @@ Astro.props = {
 
 *   *또한* `file` 과 `url` 은 중첩으로도 `frontmatter` 프로퍼티들을 사용할 수 있습니다. (예: `frontmatter.url` and `frontmatter.file`).
 
-*   frontmatter 외부에서 정의된 값들(예: `export` statements in MDX)은 사용할 수 없습니다. 대신 [레이아웃을 가져오기](#수동으로-레이아웃-가져오기-mdx)를 고려해 보세요. 
+*   프론트매터 외부에서 정의된 값들(예: `export` statements in MDX)은 사용할 수 없습니다. 대신 [레이아웃을 가져오기](#수동으로-레이아웃-가져오기-mdx)를 고려해 보세요. 
 :::
 
 ### 수동으로 레이아웃 가져오기 (MDX)
 
-frontmatter에 존재하지 않거나 존재할 수 없는 정보를 MDX 레이아웃에 전달해야 할 수도 있습니다. 이 경우에는 다른 컴포넌트처럼 [`<Layout />` 컴포넌트](/ko/core-concepts/layouts/)를 가져와 사용하고 props를 전달할 수 있습니다.
+프론트매터에 존재하지 않거나 존재할 수 없는 정보를 MDX 레이아웃에 전달해야 할 수도 있습니다. 이 경우에는 다른 컴포넌트처럼 [`<Layout />` 컴포넌트](/ko/core-concepts/layouts/)를 가져와 사용하고 props를 전달할 수 있습니다.
 
 ```mdx title="src/pages/posts/first-post.mdx" ins={6} del={2} /</?BaseLayout>/ /</?BaseLayout title={frontmatter.title} fancyJsHelper={fancyJsHelper}>/
 ---
@@ -235,7 +235,7 @@ const { title, fancyJsHelper } = Astro.props;
 
 단일 Astro 레이아웃을 작성하여 `.md` 및 `.mdx` 파일에서 `frontmatter` 객체와 `.astro` 파일에서 명명되어 전달된 모든 props을 수신할 수 있습니다.
 
-아래의 예에서, 레이아웃은 `title` 어트리뷰트를 전달하는 Astro 컴포넌트 또는 frontmatter YAML `title` 프로퍼티에서 페이지 제목을 표시합니다.
+아래의 예에서, 레이아웃은 `title` 어트리뷰트를 전달하는 Astro 컴포넌트 또는 프론트매터 YAML `title` 프로퍼티에서 페이지 제목을 표시합니다.
 
 ```astro /{?title}?/ /Astro.props[.a-z]*/
 ---
@@ -255,7 +255,7 @@ const { title } = Astro.props.frontmatter || Astro.props;
 
 레이아웃 컴포넌트는 HTML에 해당하는 전체 페이지를 포함할 필요가 없습니다. 레이아웃을 더 작은 컴포넌트로 나누고 레이아웃 컴포넌트를 결합하여 훨씬 더 유연한 페이지 템플릿을 만들 수 있습니다.
 
-예를 들어, `BlogPostLayout.astro` 레이아웃 컴포넌트는 게시물의 제목, 날짜 및 작성자를 스타일화할 수 있습니다. 그러면 사이트 전체에서 `BaseLayout.astro`가 navigation과 footers와 같은 페이지 템플릿의 나머지 부분을 처리할 수 있습니다. 또한 다른 중첩된 컴포넌트와 마찬가지로 게시물에서 받은 props를 다른 레이아웃으로 전달할 수 있습니다.
+예를 들어, `BlogPostLayout.astro` 레이아웃 컴포넌트는 게시물의 제목, 날짜 및 작성자를 스타일화할 수 있습니다. 그러면 사이트 전체에서 `BaseLayout.astro`가 네비게이션과 푸터와 같은 페이지 템플릿의 나머지 부분을 처리할 수 있습니다. 또한 다른 중첩된 컴포넌트와 마찬가지로 게시물에서 받은 props를 다른 레이아웃으로 전달할 수 있습니다.
 
 **`src/layouts/BlogPostLayout.astro`**
 
