feat(typescript): Add doc for polymorphic type

--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -235,6 +235,24 @@ type MyAttributes = astroHTML.JSX.ImgHTMLAttributes;
 ```
 :::
 
+### Polymorphic type
+
+<Since v="2.5.0" />
+
+Astro includes an helper to make it easier to build components that can render as different HTML elements. This is useful for components like `<Link>` that can render as `<a>` or `<button>` depending on the props passed to it.
+
+```astro
+---
+import { HTMLTag, Polymorphic } from 'astro/types';
+
+type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }>;
+
+const { as: Tag, ...props } = Astro.props;
+---
+
+<Tag {...props} />
+```
+
 ### Infer `getStaticPaths()` types
 
 <Since v="2.1.0" />
