move styles to component

--- a/src/content/docs/en/tutorial/3-components/3.mdx
+++ b/src/content/docs/en/tutorial/3-components/3.mdx
@@ -105,7 +105,7 @@ Since your site will be viewed on different devices, let's create a page navigat
     </div>
     ```
 
-2. Copy the CSS styles below into `global.css`. These styles:
+2. Copy the CSS styles below into `<style></style>` tags in `Navigation.astro`. These styles:
 
     - Style and position the navigation links for mobile
     - Include an `expanded` class that can be toggled to display or hide the links on mobile
@@ -115,73 +115,59 @@ Since your site will be viewed on different devices, let's create a page navigat
     Start by defining what should happen on small screen sizes first! Smaller screen sizes require simpler layouts. Then, adjust your styles to accommodate larger devices. If you design the complicated case first, then you have to work to try to make it simple again.
     :::
 
-    ```css title="src/styles/global.css" ins={23-100}
-    html {
-      background-color: #f1f5f9;
-      font-family: sans-serif;
-    }
+    ```astro title="src/components/Navigation.astro" ins={8-52}
+    ---
+    ---
+    <div class="nav-links">
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/blog">Blog</a>
+    </div>
 
-    body {
-      margin: 0 auto;
-      width: 100%;
-      max-width: 80ch;
-      padding: 1rem;
-      line-height: 1.5;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    h1 {
-      margin: 1rem 0;
-      font-size: 2.5rem;
-    }
-
-    /* nav styles */
-
-    .nav-links {
-      width: 100%;
-      top: 5rem;
-      left: 48px;
-      background-color: #ff9776;
-      display: none;
-      margin: 0;
-    }
-
-    .nav-links a {
-      display: block;
-      text-align: center;
-      padding: 10px 0;
-      text-decoration: none;
-      font-size: 1.2rem;
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-
-    .nav-links a:hover, a:focus {
-      background-color: #ff9776;
-    }
-
-    .expanded {
-      display: unset;
-    }
-
-    @media screen and (min-width: 636px) {
+    <style>
       .nav-links {
-        margin-left: 5em;
-        display: block;
-        position: static;
-        width: auto;
-        background: none;
+        width: 100%;
+        top: 5rem;
+        left: 48px;
+        background-color: #ff9776;
+        display: none;
+        margin: 0;
       }
 
       .nav-links a {
-        display: inline-block;
-        padding: 15px 20px;
+        display: block;
+        text-align: center;
+        padding: 10px 0;
+        text-decoration: none;
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-transform: uppercase;
       }
 
-    }
+      .nav-links a:hover, a:focus {
+        background-color: #ff9776;
+      }
+
+      .expanded {
+        display: unset;
+      }
+
+      @media screen and (min-width: 636px) {
+        .nav-links {
+          margin-left: 5em;
+          display: block;
+          position: static;
+          width: auto;
+          background: none;
+        }
+
+        .nav-links a {
+          display: inline-block;
+          padding: 15px 20px;
+        }
+
+      }
+    </style>
     ```
 
 Resize your window and look for different styles being applied at different screen widths. Your header is now **responsive** to screen size through the use of `@media` queries.
