--- a/src/content/docs/en/tutorial/3-components/4.mdx
+++ b/src/content/docs/en/tutorial/3-components/4.mdx
@@ -63,68 +63,78 @@ import Navigation from './Navigation.astro';
 ```
 </details>
 
-4. Add the following styles for your Hamburger component:
+4. Add the following styles to your Hamburger component:
 
-  ```css title="src/styles/global.css" ins={2-13, 56-58}
-  /* nav styles */
-  .hamburger {
-    padding-right: 20px;
-    cursor: pointer;
-  }
+  ```astro title="src/components/Header.astro" ins={8-69}
+  --- 
+  ---
+  <div class="hamburger">
+    <span class="line"></span>
+    <span class="line"></span>
+    <span class="line"></span>
+  </div>
 
-  .hamburger .line {
-    display: block;
-    width: 40px;
-    height: 5px;
-    margin-bottom: 10px;
-    background-color: #ff9776;
-  }
+  <style>
+    /* nav styles */
+    .hamburger {
+      padding-right: 20px;
+      cursor: pointer;
+    }
 
-  .nav-links {
-    width: 100%;
-    top: 5rem;
-    left: 48px;
-    background-color: #ff9776;
-    display: none;
-    margin: 0;
-  }
-
-  .nav-links a {
-    display: block;
-    text-align: center;
-    padding: 10px 0;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-
-  .nav-links a:hover, a:focus {
-    background-color: #ff9776;
-  }
-
-  .expanded {
-    display: unset;
-  }
-
-  @media screen and (min-width: 636px) {
-    .nav-links {
-      margin-left: 5em;
+    .hamburger .line {
       display: block;
-      position: static;
-      width: auto;
-      background: none;
+      width: 40px;
+      height: 5px;
+      margin-bottom: 10px;
+      background-color: #ff9776;
+    }
+
+    .nav-links {
+      width: 100%;
+      top: 5rem;
+      left: 48px;
+      background-color: #ff9776;
+      display: none;
+      margin: 0;
     }
 
     .nav-links a {
-      display: inline-block;
-      padding: 15px 20px;
+      display: block;
+      text-align: center;
+      padding: 10px 0;
+      text-decoration: none;
+      font-size: 1.2rem;
+      font-weight: bold;
+      text-transform: uppercase;
     }
 
-    .hamburger {
-      display: none;
+    .nav-links a:hover, a:focus {
+      background-color: #ff9776;
     }
-  }
+
+    .expanded {
+      display: unset;
+    }
+
+    @media screen and (min-width: 636px) {
+      .nav-links {
+        margin-left: 5em;
+        display: block;
+        position: static;
+        width: auto;
+        background: none;
+      }
+
+      .nav-links a {
+        display: inline-block;
+        padding: 15px 20px;
+      }
+
+      .hamburger {
+        display: none;
+      }
+    }
+  </style>
   ```
 
 
