Apply suggestions from code review
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/reference/integrations-reference.mdx
+++ b/src/content/docs/en/reference/integrations-reference.mdx
@@ -3,6 +3,7 @@ title: Astro Integration API
 i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
+import Since from '~/components/Since.astro'
 
 **Astro Integrations** add new functionality and behaviors for your project with only a few lines of code.
 
@@ -145,10 +146,11 @@ addWatchFile(new URL('./tailwind.config.js', config.root));
 #### `addClientDirective` option
 
 <span style="margin: 0.25em;"><Badge variant="accent">Experimental</Badge></span>
+<Since v="2.5.0" />
 
 **Type:** `(directive:` [`ClientDirectiveConfig`](https://github.com/withastro/astro/blob/00327c213f74627ac9ca1dec774efa5bf71e9375/packages/astro/src/%40types/astro.ts#L1872-L1875) `) => void;`
 
-Adds a [custom client directive](/en/reference/directives-reference/#custom-client-directives) to be used in Astro files. As this is an experimental feature, you also need to enable the [`experimental.customClientDirectives` option](/en/reference/configuration-reference/#experimentalcustomclientdirectives) to use this API.
+Adds a [custom client directive](/en/reference/directives-reference/#custom-client-directives) to be used in Astro files. As this is an experimental feature, you also need to enable the [`experimental.customClientDirectives` configuration option](/en/reference/configuration-reference/#experimentalcustomclientdirectives) to use this API.
 
 Note that directive entrypoints are only bundled through esbuild and should be kept small so they don't slow down component hydration.
 
