--- a/src/content/docs/en/tutorial/3-components/3.mdx
+++ b/src/content/docs/en/tutorial/3-components/3.mdx
@@ -105,7 +105,7 @@ Since your site will be viewed on different devices, let's create a page navigat
     </div>
     ```
 
-2. Copy the CSS styles below into `<style></style>` tags in `Navigation.astro`. These styles:
+2. Copy the CSS styles below into `<style>` tags in `Navigation.astro`. These styles:
 
     - Style and position the navigation links for mobile
     - Include an `expanded` class that can be toggled to display or hide the links on mobile
