--- a/src/content/docs/en/reference/integrations-reference.mdx
+++ b/src/content/docs/en/reference/integrations-reference.mdx
@@ -145,8 +145,8 @@ addWatchFile(new URL('./tailwind.config.js', config.root));
 
 #### `addClientDirective` option
 
-<span style="margin: 0.25em;"><Badge variant="accent">Experimental</Badge></span>
 <Since v="2.5.0" />
+<Badge variant="accent">Experimental</Badge>
 
 **Type:** `(directive:` [`ClientDirectiveConfig`](https://github.com/withastro/astro/blob/00327c213f74627ac9ca1dec774efa5bf71e9375/packages/astro/src/%40types/astro.ts#L1872-L1875) `) => void;`
 
