chore: inline defines -> explicit

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -172,19 +172,23 @@ You can use `defineCollection()` as many times as you want to create multiple sc
 
 ```ts
 // src/content/config.ts
+const blogCollection = defineCollection({
+  type: 'content',
+  schema: z.object({ /* ... */ })
+});
+const newsletter = defineCollection({
+  type: 'content',
+  schema: z.object({ /* ... */ })
+});
+const authors = defineCollection({
+  type: 'data',
+  schema: z.object({ /* ... */ })
+});
+
 export const collections = {
-  'blog': defineCollection({
-    type: 'content',
-    schema: z.object({ /* ... */ })
-  }),
-  'newsletter': defineCollection({
-    type: 'content',
-    schema: z.object({ /* ... */ })
-  }),
-  'authors': defineCollection({
-    type: 'data',
-    schema: z.object({ /* ... */ })
-  }),
+  'blog': blogCollection,
+  'newsletter': newsletter,
+  'authors': authors,
 };
 ```
 
@@ -194,7 +198,7 @@ As your project grows, you are also free to reorganize your codebase and move lo
 // src/content/config.ts
 // 1. Import your utilities and schemas
 import { defineCollection } from 'astro:content';
-import {blogSchema, authorSchema} from '../schemas';
+import { blogSchema, authorSchema } from '../schemas';
 
 // 2. Define your collections
 const blogCollection = defineCollection({
@@ -220,7 +224,7 @@ You can import collection schemas from anywhere, including external npm packages
 
 ```ts
 // src/content/config.ts
-import {blogSchema} from 'my-blog-theme';
+import { blogSchema } from 'my-blog-theme';
 const blogCollection = defineCollection({ type: 'content', schema: blogSchema });
 
 // Export the blog collection, using an external schema from 'my-blog-theme'
