edit: Astro recommends splitting -> you must
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -760,7 +760,7 @@ This function accepts the following properties:
 - `'data'` - for data-only formats like JSON (`.json`) or YAML (`.yaml`)
 
 :::tip
-This means collections **cannot** store a mix of content and data formats. If you find the need, Astro recommends splitting these entries into separate collections with a shared [schema](#schema).
+This means collections **cannot** store a mix of content and data formats. You must split these entries into separate collections by type.
 :::
 
 #### `schema`
