chore: caution deprecated

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -895,8 +895,8 @@ const captainProfile = await getEntries(enterprise.data.relatedPosts);
 
 **Type:** `(collection: string, slug: string) => CollectionEntry<collection>`
 
-:::note
-Astro recommends using the new `getEntry()` function. This accepts the same arguments as `getEntryBySlug()`, and supports querying by `id` for JSON or YAML collections.
+:::caution[Deprecated]
+Use the [`getEntry()` function](#getentry) to query content entries. This accepts the same arguments as `getEntryBySlug()`, and supports querying by `id` for JSON or YAML collections.
 :::
 
 `getEntryBySlug()` is a function that retrieves a single collection entry by collection name and entry `slug`.
