--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -838,7 +838,7 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 - `({ collection: string, id: string }) => CollectionEntry<collection>`
 - `({ collection: string, slug: string }) => CollectionEntry<collection>`
 
-`getEntry()` is a function that retrieves a single collection entry by collection name and either the entry `id` (for JSON or YAML collections) or entry `slug` (for Markdown or MDX collections).
+`getEntry()` is a function that retrieves a single collection entry by collection name and either the entry `id` (for JSON or YAML collections) or entry `slug` (for Markdown or MDX collections). `getEntry()` can also be used to get referenced entries to access the `data`, `body`, or `render()` properties:
 
 ```astro
 ---
@@ -847,21 +847,11 @@ import { getEntry } from 'astro:content';
 // Get `src/content/blog/enterprise.md`
 const enterprisePost = await getEntry('blog', 'enterprise');
 
-// Get `src/content/captains/captain-kirk.yaml`
-const captainProfile = await getEntry('captains', 'captain-kirk');
----
-```
-
-`getEntry()` can also be used to get referenced entries to access the `data`, `body`, or `render()` properties:
-
-```astro
----
-import { getEntry } from 'astro:content';
-
-const enterprisePost = await getEntry('blog', 'enterprise');
+// Get `src/content/captains/picard.yaml`
+const picardProfile = await getEntry('captains', 'picard');
 
 // Get the profile referenced by `data.captain`
-const captainProfile = await getEntry(enterprise.data.captain);
+const enterpriseCaptainProfile = await getEntry(enterprise.data.captain);
 ---
 ```
 
