edit: add `getEntries()` to "query functions"

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -904,7 +904,7 @@ const enterprise = await getEntryBySlug('blog', 'enterprise');
 
 ### Collection Entry Type
 
-Query functions including [`getCollection()`](#getcollection) and [`getEntry()`](#getentry) each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
+Query functions including [`getCollection()`](#getcollection), [`getEntry()`](#getentry), and [`getEntries()`](#getentries) each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
 
 ```ts
 import type { CollectionEntry } from 'astro:content';
