--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -914,41 +914,44 @@ The `CollectionEntry<TCollectionName>` type is an object with the following valu
 
 #### `id`
 
-**Example Type for "content" collections:** `'entry-1.md' | 'entry-2.md' | ...`  
-**Example Type for "data" collections:** `'author-1' | 'author-2' | ...`
+**Available for:** `type: 'content'` and `type: 'data'` collections  
+**Example Types:**
+  - content collections: `'entry-1.md' | 'entry-2.md' | ...`
+  - data collections: `'author-1' | 'author-2' | ...`
 
 A unique ID using the file path relative to `src/content/[collection]`. Enumerates all possible string values based on the collection entry file paths. Note that collections [defined as `type: 'content'`](#type) include the file extension in their ID, while collections defined as `type: 'data'` do not.
 
 #### `collection`
 
+**Available for:** `type: 'content'` and `type: 'data'` collections  
 **Example Type:** `'blog' | 'authors' | ...`
 
 The name of a top-level folder under `src/content/` in which entries are located. This is the name used to reference the collection in your schema, and in querying functions.
 
 #### `data`
 
+**Available for:** `type: 'content'` and `type: 'data'` collections  
 **Type:** `CollectionSchema<TCollectionName>`
 
 An object of frontmatter properties inferred from your collection schema ([see `defineCollection()` reference](#definecollection)). Defaults to `any` if no schema is configured.
 
-#### Content-specific properties
+#### `slug`
 
-The following properties are only available for collections [defined as `type: 'content'`](#type):
-
-##### `slug`
-
+**Available for:** `type: 'content'` collections only  
 **Example Type:** `'entry-1' | 'entry-2' | ...`
 
 A URL-ready slug for Markdown or MDX documents. Defaults to the `id` without the file extension, but can be overridden by setting [the `slug` property](/en/guides/content-collections/#defining-custom-slugs) in a file's frontmatter.
 
-##### `body`
+#### `body`
 
+**Available for:** `type: 'content'` collections only  
 **Type:** `string`
 
 A string containing the raw, uncompiled body of the Markdown or MDX document.
 
-##### `render()`
+#### `render()`
 
+**Available for:** `type: 'content'` collections only  
 **Type:** `() => Promise<RenderedEntry>`
 
 A function to compile a given Markdown or MDX document for rendering. This returns the following properties:
