improve TinaCMS linkage

--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -146,7 +146,7 @@ To get started, you'll need an existing Astro project.
 
 ## Official Resources
 
-- TinaCMS provides their own [Astro integration guide](https://www.storyblok.com/mp/announcing-storyblok-astro](https://tina.io/docs/frameworks/astro/).
+- [TinaCMS Astro integration guide](https://tina.io/docs/frameworks/astro/).
 
 ## Community Resources 
 
