--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -255,7 +255,7 @@ const { title } = Astro.props.frontmatter || Astro.props;
 
 레이아웃 컴포넌트는 HTML에 해당하는 전체 페이지를 포함할 필요가 없습니다. 레이아웃을 더 작은 컴포넌트로 나누고 레이아웃 컴포넌트를 결합하여 훨씬 더 유연한 페이지 템플릿을 만들 수 있습니다.
 
-예를 들어, `BlogPostLayout.astro` 레이아웃 컴포넌트는 게시물의 제목, 날짜 및 작성자를 스타일화할 수 있습니다. 그러면 사이트 전체에서 `BaseLayout.astro`가 네비게이션과 푸터와 같은 페이지 템플릿의 나머지 부분을 처리할 수 있습니다. 또한 다른 중첩된 컴포넌트와 마찬가지로 게시물에서 받은 props를 다른 레이아웃으로 전달할 수 있습니다.
+예를 들어, `BlogPostLayout.astro` 레이아웃 컴포넌트는 게시물의 제목, 날짜 및 작성자에 스타일을 적용할 수 있습니다. 그리고 `BaseLayout.astro`가 사이트의 네비게이션과 푸터와 같은 페이지 템플릿의 나머지 부분을 처리할 수 있습니다. 또한 다른 중첩된 컴포넌트와 마찬가지로 게시물에서 받은 props를 다른 레이아웃으로 전달할 수 있습니다.
 
 **`src/layouts/BlogPostLayout.astro`**
 
