--- a/src/content/docs/en/guides/cms/decap-cms.mdx
+++ b/src/content/docs/en/guides/cms/decap-cms.mdx
@@ -22,6 +22,6 @@ i18nReady: false
 
 The following sites use Astro + Decap CMS in production:
 
-- [yunielacosta.com](https://www.yunielacosta.com/) by Yuniel Acosta — [source code on GitHub](https://github.com/yacosta738/yacosta738.github.io)
+- [yunielacosta.com](https://www.yunielacosta.com/) by Yuniel Acosta — [source code on GitHub](https://github.com/yacosta738/yacosta738.github.io) (Netlify CMS)
 - [portfolioris.nl](https://www.portfolioris.nl/) by Joris Hulsbosch – [source code on GitHub](https://github.com/portfolioris/portfolioris.nl)
 
