--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -239,7 +239,7 @@ type MyAttributes = astroHTML.JSX.ImgHTMLAttributes;
 
 <Since v="2.5.0" />
 
-Astro includes an helper to make it easier to build components that can render as different HTML elements. This is useful for components like `<Link>` that can render as `<a>` or `<button>` depending on the props passed to it.
+Astro includes a helper to make it easier to build components that can render as different HTML elements. This is useful for components like `<Link>` that can render as either `<a>` or `<button>` depending on the props passed to it.
 
 ```astro
 ---
