--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -35,7 +35,7 @@ To get started, you will need to have the following:
 
 3. **A builder.io API key** - This key will be used to fetch your content and the HTML you create in the Builder editor. [Here's](https://www.builder.io/c/docs/using-your-api-key) Builder's guide how to find it. 
 
-4. A basic understanding of Builder - models, sections, preview URL and the REST API. [xxx] [xxx]
+4. A basic understanding of Builder - models, sections, preview URL and the REST API. mhm [xxx] [xxx]
 
 ### Setting up credentials
 
